<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTripFragment" >

    <ImageView
        android:id="@+id/iv_vt_dp"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@android:drawable/alert_dark_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_vt_back" />

    <TextView
        android:id="@+id/lbl_vt_tripTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_vt_dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_vt_back" />

    <TextView
        android:id="@+id/lbl_vt_createdBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/iv_vt_dp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_vt_tripTitle" />

    <TextView
        android:id="@+id/lbl_vt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_location"
        app:layout_constraintStart_toEndOf="@+id/iv_vt_dp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_vt_createdBy" />

    <TextView
        android:id="@+id/lbl_vt_tripLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/lbl_vt_location"
        app:layout_constraintTop_toBottomOf="@+id/lbl_vt_createdBy" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_chatRoom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_vt_dp" />

    <Button
        android:id="@+id/btn_vt_join"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#36595E5F"
        android:text="@string/lbl_trip_item_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vt_chatsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/txt_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="Start typing..."
        android:inputType="textLongMessage|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_vt_attachImage"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_vt_send"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="64sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="#36595E5F"
        android:foreground="@android:drawable/ic_menu_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_vt_attachImage"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="64sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="#36595E5F"
        android:foreground="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_vt_send" />

    <Button
        android:id="@+id/btn_vt_back"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="back"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>